fixed spacing of button in 'home-middle' content

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -275,10 +275,11 @@ svg#dxp-curves, svg#commerce-curves, svg#analytics-cloud-curves {
   width: 756px;
   height: 640px;
   margin-left: 190px;
-  margin-top: 20px;
+  margin-top: 44px;
 }
 .info-img {
   display: flex;
+  margin-top: 40px;
   img {
     height: 45px;
     width: 145px;
